samples/_failures_safe/1761245362_f8279e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b07ad723.c: In function ‘main’:
./samples/SAFE/__tmp_b07ad723.c:171:20: error: missing terminating " character
  171 |             printf("Error state detected, resetting...
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b07ad723.c:171:13: error: expected expression at end of input
  171 |             printf("Error state detected, resetting...
      |             ^~~~~~
./samples/SAFE/__tmp_b07ad723.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b07ad723.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b07ad723.c:171:13: error: expected declaration or statement at end of input
